[package]
name = "rust-esp32-service"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }

[features]
default = ["experimental"]

experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]


[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = "0.42.1"
esp-idf-hal = "0.38"
embedded-svc = "0.22"
embedded-hal = "0.2"
oauth2 = { version = "4.2.3", default-features = false }
stepper = "0.6.0"
num-traits = "0.2.15"
fugit = "0.3.6"
fugit-timer = "0.1.3"
fixed = "1.19.0"
typenum = "1.15.0"
nb = "1.0.0"
void = "1.0.2"

[build-dependencies]
embuild = "0.29"
anyhow = "1"

[dependencies.drv8825]
version = "0.6.0"
